--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,4 +1,3 @@
-version: '3.1'
 services:
 # reader 在线阅读
 # 公开服务器(服务器位于日本)：[https://reader.nxnow.top](https://reader.nxnow.top) 测试账号/密码分别为guest/guest123，也可自行创建账号添加书源，不定期删除长期未登录账号(2周)
@@ -6,28 +5,28 @@ services:
 # 公众号汇总 : [https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MjM5MzMyMDgyMA==&action=getalbum&album_id=2397535253763801090#wechat_redirect](https://mp.weixin.qq.com/mp/appmsgalbum?__biz=MjM5MzMyMDgyMA==&action=getalbum&album_id=2397535253763801090#wechat_redirect)
 # 手动更新方式 : docker-compose pull && docker-compose up -d
   reader:
-    image: hectorqin/reader
-    #image: hectorqin/reader:openj9-latest #docker镜像，arm64架构或小内存机器优先使用此镜像.启用需删除上一行
+    #image: hectorqin/reader
+    image: hectorqin/reader:openj9-latest #docker镜像，arm64架构或小内存机器优先使用此镜像.启用需删除上一行
     container_name: reader #容器名 可自行修改
     restart: always
     ports:
-      - 4396:8080 #4396端口映射可自行修改
+      - 4396 #4396端口映射可自行修改
     networks:
-      - share_net
+      - moontv-network
     volumes:
-      - /home/reader/logs:/logs #log映射目录 /home/reader/logs 映射目录可自行修改
-      - /home/reader/storage:/storage #数据映射目录 /home/reader/storage 映射目录可自行修改
+      - "reader-logs:/logs" #log映射目录 /home/reader/logs 映射目录可自行修改
+      - "reader-storage:/storage" #数据映射目录 /home/reader/storage 映射目录可自行修改
     environment:
       - SPRING_PROFILES_ACTIVE=prod
       - READER_APP_USERLIMIT=50 #用户上限,默认50
-      - READER_APP_USERBOOKLIMIT=200 #用户书籍上限,默认200
+      - READER_APP_USERBOOKLIMIT=20000 #用户书籍上限,默认200
       - READER_APP_CACHECHAPTERCONTENT=true #开启缓存章节内容 V2.0
       # 如果启用远程webview，需要取消注释下面的 remote-webview 服务
       # - READER_APP_REMOTEWEBVIEWAPI=http://remote-webview:8050 #开启远程webview
       # 下面都是多用户模式配置
       - READER_APP_SECURE=true #开启登录鉴权，开启后将支持多用户模式
       - READER_APP_SECUREKEY=adminpwd  #管理员密码  建议修改
-      - READER_APP_INVITECODE=registercode #注册邀请码 建议修改,如不需要可注释或删除
+      #- READER_APP_INVITECODE=registercode #注册邀请码 建议修改,如不需要可注释或删除
   # remote-webview:
   #   image: hectorqin/remote-webview
   #   container_name: remote-webview #容器名 可自行修改
@@ -52,6 +51,9 @@ services:
     # 仅更新reader与watchtower容器,如需其他自行添加 '容器名' ,如:reader watchtower nginx
     # --cleanup 更新后清理旧版本镜像
     # --schedule 自动检测更新 crontab定时(限定6位crontab) 此处代表凌晨4点整
+    
+volumes:
+    reader-logs:
+    reader-storage:
 networks:
-  share_net:
-    driver: bridge
+  moontv-network: external
