--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -47,7 +47,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     command: reader watchtower --cleanup --schedule "0 0 4 * * *"
     networks:
-      - share_net
+      - moontv-network
     # 仅更新reader与watchtower容器,如需其他自行添加 '容器名' ,如:reader watchtower nginx
     # --cleanup 更新后清理旧版本镜像
     # --schedule 自动检测更新 crontab定时(限定6位crontab) 此处代表凌晨4点整
@@ -56,4 +56,5 @@ volumes:
     reader-logs:
     reader-storage:
 networks:
-  moontv-network: external
+  moontv-network: 
+    external: true
