--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -12,7 +12,7 @@ services:
     ports:
       - 4396 #4396端口映射可自行修改
     networks:
-      - moontv-network
+      - reader-network
     volumes:
       - "reader-logs:/logs" #log映射目录 /home/reader/logs 映射目录可自行修改
       - "reader-storage:/storage" #数据映射目录 /home/reader/storage 映射目录可自行修改
@@ -42,19 +42,28 @@ services:
     restart: always
     # 环境变量,设置为上海时区
     environment:
-        - TZ=Asia/Shanghai
+        - TZ=America/New_York
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
     command: reader watchtower --cleanup --schedule "0 0 4 * * *"
     networks:
-      - moontv-network
+      - reader-network
     # 仅更新reader与watchtower容器,如需其他自行添加 '容器名' ,如:reader watchtower nginx
     # --cleanup 更新后清理旧版本镜像
     # --schedule 自动检测更新 crontab定时(限定6位crontab) 此处代表凌晨4点整
+
+  cloudflared:
+    image: cloudflare/cloudflared:latest
+    command: tunnel --no-autoupdate run
+    environment:
+       - TUNNEL_TOKEN=${CF_TOKEN}
+    restart: unless-stopped
+    networks:
+      - reader-network
     
 volumes:
     reader-logs:
     reader-storage:
 networks:
-  moontv-network: 
-    external: true
+  reader-network: 
+    driver: bridge
